<resources>
    <string name="app_name">Calculator</string>
    <string name="result">result</string>
    <string name="b_1">1</string>
    <string name="b_3">3</string>
    <string name="b_2">2</string>
    <string name="b_x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="b_pl">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="b_min">-</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="div">/</string>
    <string name="clear">clear</string>
    <string name="btnback">⬅</string>
    <string name="hello">hello</string>
    <string name="textview">TextView</string>
    <string name="signbox">TextView</string>
    <string name="history">History</string>
    <string name="img">TODO</string>
</resources>